--- a/luana.html
+++ b/luana.html
@@ -5,7 +5,7 @@
     <title>Como a vida precisa ser vivida?</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<img src="1.jpg" alt="" width="20%" text-align="center"</1.img>
+<img src="JANELA.PNG" alt="" width="20%" text-align="center"</JANELAimg>
 
 <body>
     <h1>Como a vida precisa ser vivida?</h1>
